Add menu.xml for the optional menu. Add settings_activity.xml, SettingsActivity.kt, and root_preferences.xml. Then link the SettingsActivity.kt to optional menu. Next step. - make back arrow works. - make save option works. - make night theme works.

--- a/app/src/main/res/values-th/strings.xml
+++ b/app/src/main/res/values-th/strings.xml
@@ -8,4 +8,5 @@
     <string name="history">ผลลัพธ์ก่อนหน้า</string>
     <string name="clear">ล้างผลลัพธ์</string>
     <string name="reset">ตั้งค่าเริ่มต้น</string>
+    <string name="settings">ตั้งค่า</string>
 </resources>
